objects/DT_Rule__c.object
<CustomObject>
    <fields>
        <fullName>DT_Active_Queue__c</fullName>
        <description>Will show the Queue value of the active version</description>
        <label>Active Queue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Description__c</fullName>
        <label>Task Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DT_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DT_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows whether the rule is Active based on the versions</description>
        <label>Is Active ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DT_Module__c</fullName>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DT_Rule_Description__c</fullName>
        <label>Rule Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DT_Rule_Type__c</fullName>
        <label>Rule Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Task</fullName>
                    <default>true</default>
                    <label>Task</label>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DT_Target_SObject_API_Name__c</fullName>
        <description>API Name of the SObject which the rule is related to</description>
        <label>Target Object</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DT_Task_Code__c</fullName>
        <label>Task Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DT_Task_Name__c</fullName>
        <label>Task Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>